Changes to background top

--- a/index.html
+++ b/index.html
@@ -46,18 +46,18 @@
         </div><!-- /#sidebar-wrapper -->
         <!-- Page Content -->
         <div id="page-content-wrapper" style="padding:0px">
-            <div id="top_me" style="height:276px"></div>
-            <div class="container-fluid" style="margin-top:-250px">
+            <div id="top_me" style="height:400px"></div>
+            <div class="container-fluid" style="margin-top:-320px">
                 <div class="row">
-                    <div class="col-xs-offset-1 col-xs-2">
-                         <img src="images/eu.jpg" class="img-circle" width="200" height="200">
-                    </div>
-                    <div class="col-xs-4" style="color: white; padding-top:5%">
-                         <h1>Jorge Santos</h1>
-                    </div>
+                  <div class="col-xs-2">
+                        <img src="images/eu_blue.jpg" class="img-circle" width="304" height="236">
+                  </div>
+                  <div class="col-xs-3" style="padding-top:80px;color: rgb(182,212,223); margin-left: 12%;text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;">
+                       <h1>Jorge Santos</h1>
+                  </div>
                 </div>
             </div>
-            <div class="row" style="padding-top:50px">
+            <div class="row" style="padding-top:200px">
                 <div class="col-xs-12">
                     <p> Lorem Ipsum</p>
                 </div>
