--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <div id="home" class="banner">
 	<div class="container">
 		<div class="banner-grids">
-			<div class="col-xs-12">
-				<div class="nav-left" style="width:100%">
+			<div class="col-xs-12 banner-title">
+				<div class="nav-left">
 					<div class="grid__item color-4">
-						<a class="link link--kumya" href="#home"><span data-letters="JORGE">JORGE</span></a>
+						<a class="link link--kumya" href="#home"><span data-letters="Jorge Guerra dos Santos">Jorge Guerra dos Santos</span></a>
 					</div>
 				</div>
 			</div>
-			<div class="col-md-4 navigation options">
+			<div class="col-md-4 navigation">
 				<div class="nav-right">
 						<span class="menu"><img src="images/menu.png" alt="" /></span>
 							<nav class="cl-effect-1">
