--- a/index.html
+++ b/index.html
@@ -87,24 +87,29 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="about-info">
 				<h3>ABOUT ME</h3>
 				<h4>Who I am and why I program</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-				   ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-				   ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				<p>My name is Jorge Santos and i'm a 22 years-old student and i'm aspiring to be a software engineer.</p>
+
+				<p>When i started this journey into the realm of Computer Science, i was not fully aware what i was getting
+					myself into, but soon found out that i love to program, despite not having a specific area of interest,
+					because it gives me the potencial to create amazing and cool stuff in a very easy and practical way.</p>
 		</div>
 		<div class="about-grids">
 		   	<div class="col-md-6 about-grid">
 		   		<h4>What I do and my experience</h4>
-		   		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                   eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                   Ut enim ad minim veniam, quis nostrud exercitation
-                   ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+		   		<p>Currently i'm on my fifth year at "Mestrado Integrado em Engenharia Informática e Computação" in FEUP
+					where i'm learning concepts, from agile methodologies to project management, developing programming projects
+					and training my soft-skills.</p>
+					<p>Aside my academic experience, i was an intern in Glintt Healthcare Solutions in Oporto for two months.
+					During that internship i collaborated in the development of a medical application, using HTML5/CSS3, Javascript,
+					JQuery and C#, and was able to perform well in a professional environment.</p>
 		   	</div>
 		   	<div class="col-md-6 about-grid">
 		   		<h4>My goals</h4>
-		   		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                   eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                   Ut enim ad minim veniam, quis nostrud exercitation
-                   ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+		   		<p>My primary goal is to be happy. To achieve that i need to feel challenged and to feel useful. Thankfully,
+					 Informatics is in a constant and rapid evolution, there are always more new concepts to learn, and in this field
+					 teamwork is paramount, and i like to consider myself as a team player, as i do my best to avoid any type
+					 of conflict through my work ethic and the respect i have for every person i meet.
+				 	</p>
 		   	</div>
 		   	<div class="clearfix"> </div>
 		</div>
