--- a/index.html
+++ b/index.html
@@ -178,42 +178,24 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<section>
 				<ul id="da-thumbs" class="da-thumbs">
 					<li>
-						<a href="images/" rel="title" class="b-link-stripe b-animate-go  thickbox">
-							<img src="images/" alt="" />
+						<a href="images/acteam.PNG" rel="title" class="b-link-stripe b-animate-go  thickbox">
+							<img src="images/acteam.PNG" alt="" />
 							<div>
 								<h5>VIEW</h5>
 							</div>
 						</a>
 					</li>
 					<li>
-						<a href="images/" rel="title" class="b-link-stripe b-animate-go  thickbox">
-							<img src="images/" alt="" />
+						<a href="images/itRides.PNG" rel="title" class="b-link-stripe b-animate-go  thickbox">
+							<img src="images/itRides.PNG" alt="" />
 							<div>
 								<h5>VIEW</h5>
 							</div>
 						</a>
 					</li>
 					<li>
-						<a href="images/" rel="title" class="b-link-stripe b-animate-go  thickbox">
-							<img src="images/" alt="" />
-							<div>
-								<h5>VIEW</h5>
-
-							</div>
-						</a>
-					</li>
-					<li>
-						<a href="images/" rel="title" class="b-link-stripe b-animate-go  thickbox">
-							<img src="images/" alt="" />
-							<div>
-								<h5>VIEW</h5>
-
-							</div>
-						</a>
-					</li>
-					<li>
-						<a href="images/" rel="title" class="b-link-stripe b-animate-go  thickbox">
-							<img src="images/" alt="" />
+						<a href="images/PewPew.PNG" rel="title" class="b-link-stripe b-animate-go  thickbox">
+							<img src="images/PewPew.PNG" alt="" />
 							<div>
 								<h5>VIEW</h5>
 
