Added CV option

--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<nav class="cl-effect-1">
 								<ul class="nav1">
 									<li><a class="scroll" href="#home">Home</a></li>
-									<li><a class="scroll" href="#about">About</a></li>
+									<li><a class="scroll" href="#about">About Me</a></li>
 									<li><a class="scroll" href="#portfolio">Portfolio</a></li>
 									<li><a class="scroll" href="#contact">Contact</a></li>
+									<li><a class="scroll" href="#" onClick="window.open('http://gnomo.fe.up.pt/~ei11057/CV.pdf', '_blank')">Curriculum Vitae</a></li>
 								</ul>
 							</nav>
 							<!-- script for menu -->
