Fix on the text space in the About Me Section

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									<li><a class="scroll" href="#about">About Me</a></li>
 									<li><a class="scroll" href="#portfolio">Portfolio</a></li>
 									<li><a class="scroll" href="#contact">Contact</a></li>
-									<li><a class="scroll" href="#" onClick="window.open('http://gnomo.fe.up.pt/~ei11057/CV.pdf', '_blank')">Curriculum Vitae</a></li>
+									<li><a class="scroll" href="#" onClick="window.open('http://web.fe.up.pt/~ei11057/CV.pdf', '_blank')">Curriculum Vitae</a></li>
 								</ul>
 							</nav>
 							<!-- script for menu -->
@@ -102,7 +102,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					and training my soft-skills.</p>
 					<p>Aside my academic experience, i was an intern in Glintt Healthcare Solutions in Oporto for two months.
 					During that internship i collaborated in the development of a medical application, using HTML5/CSS3, Javascript,
-					JQuery and C#, and was able to perform well in a professional environment.</p>
+					JQuery and C#, and was able to perform well in a professional environment.</p><p/>
 		   	</div>
 		   	<div class="col-md-6 about-grid">
 		   		<h4>My goals</h4>
