--- a/index.html
+++ b/index.html
@@ -88,28 +88,29 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="about-info">
 				<h3>ABOUT ME</h3>
 				<h4>Who I am and why I program</h4>
-				<p>My name is Jorge Santos and i'm a 22 years-old student and i'm aspiring to be a software engineer.</p>
+				<p>My name is Jorge Santos and i'm a 22 years-old student, with the aspiration to be a software engineer.</p>
 
-				<p>When i started this journey into the realm of Computer Science, i was not fully aware what i was getting
-					myself into, but soon found out that i love to program, despite not having a specific area of interest,
-					because it gives me the potencial to create amazing and cool stuff in a very easy and practical way.</p>
+				<p>When I started my studies in Computer Science, i was not fully aware what I was getting
+					myself into, but soon found out that I love to program. I do not have a specific area of interest,
+					although the potencial to create different things in a simple and practical way, gives me a special pleasure.</p>
 		</div>
 		<div class="about-grids">
 		   	<div class="col-md-6 about-grid">
 		   		<h4>What I do and my experience</h4>
-		   		<p>Currently i'm on my fifth year at "Mestrado Integrado em Engenharia Informática e Computação" in FEUP
-					where i'm learning concepts, from agile methodologies to project management, developing programming projects
+		   		<p>I am currently on my fifth year of "Mestrado Integrado em Engenharia Informática e Computação" in FEUP
+					where I am learning concepts, from agile methodologies to project management, developing programming projects
 					and training my soft-skills.</p>
-					<p>Aside my academic experience, i was an intern in Glintt Healthcare Solutions in Oporto for two months.
-					During that internship i collaborated in the development of a medical application, using HTML5/CSS3, Javascript,
-					JQuery and C#, and was able to perform well in a professional environment.</p><p/>
+					<p>Aside my academic experience, I was an intern in Glintt Healthcare Solutions in Oporto for two months, during summer vacations.
+					Through that internship I collaborated in the development of a medical application, using HTML5/CSS3, Javascript,
+					JQuery and C#. I really enjoyed this first working experience and I felt that I was able to perform well in a professional environment.</p><p/>
 		   	</div>
 		   	<div class="col-md-6 about-grid">
 		   		<h4>My goals</h4>
-		   		<p>My primary goal is to be happy. To achieve that i need to feel challenged and to feel useful. Thankfully,
-					 Informatics is in a constant and rapid evolution, there are always more new concepts to learn, and in this field
-					 teamwork is paramount, and i like to consider myself as a team player, as i do my best to avoid any type
-					 of conflict through my work ethic and the respect i have for every person i meet.
+		   		<p>My main goal is to be happy. And loving what you do, feeling constantly challenged and useful,
+					 is the only way to do a great work. Thankfully, Informatics is in a constant and fast evolution,
+					 therefore, there are always more new concepts to learn.
+					 I see myself as a team player, as I do my best to avoid any type of conflict through my work,
+					 respecting - professional and personally - every person I meet. I see life as a permanent learning experience.
 				 	</p>
 		   	</div>
 		   	<div class="clearfix"> </div>
