--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="contact-grids">
 			<div class="col-md-4 contact-grid text-center">
 				<div class="point-icon"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span></div>
-				<p><a href="mailto:info@example.com">j.miguelgsantos@hotmail.com</a></p>
+				<p><a href="mailto:j.miguelgsantos@hotmail.com">j.miguelgsantos@hotmail.com</a></p>
 			</div>
 			<div class="col-md-4 contact-grid text-center">
 				<div class="point-icon"><span class="fa fa-linkedin" aria-hidden="true"></span></div>
